--- a/views/homepages/index-system-temporarily-closed.ejs
+++ b/views/homepages/index-system-temporarily-closed.ejs
@@ -36,7 +36,7 @@
           <img src="img/logo_bulsu.png" class="main-first-logo no-mobile" alt="BulSU Logo" />
           <div class="first-text">
             <h2 class="montserrat period">
-              <span>System <br />Temporarily Closed</span>
+              <span>System Temporarily Closed</span>
             </h2>
           </div>
           <img src="img/logo_bulsu_ucse.png" class="main-first-logo no-mobile" alt="BulSU UCSE Logo" />
