--- a/views/homepages/index-voting-period.ejs
+++ b/views/homepages/index-voting-period.ejs
@@ -31,7 +31,7 @@
       </div>
 
       <div class="content-main">
-        <div class="content-main-left">
+        <div class="content-main-left no-mobile">
           <img src="img/logo_bulsu.png" alt="BulSU Logo" class="logo-opacity" /> <br />
           <p class="montserrat" id="be-heard">Be Heard! Your Vote is Your Power!</p>
         </div>
@@ -73,9 +73,21 @@
           <button id="voting-button" class="button-rounded-yellow" onclick="window.location.href='/vote';">VOTE NOW</button>
         </div>
 
-        <div class="content-main-right">
+        <div class="content-main-right no-mobile">
           <img src="img/logo_bulsu_ucse.png" alt="BulSU UCSE Logo" class="logo-opacity" /><br />
           <p class="montserrat" id="vote-now">Vote Now for the Student Government Elections!</p>
+        </div>
+
+        <div class="content-mobile">
+          <div class="content-main-left">
+            <img src="img/logo_bulsu.png" alt="BulSU Logo" class="logo-opacity" /> <br />
+            <p class="montserrat" id="be-heard">Be Heard! Your Vote is Your Power!</p>
+          </div>
+
+          <div class="content-main-right">
+            <img src="img/logo_bulsu_ucse.png" alt="BulSU UCSE Logo" class="logo-opacity" /><br />
+            <p class="montserrat" id="vote-now">Vote Now for the Student Government Elections!</p>
+          </div>
         </div>
       </div>
     </div>
