--- a/views/voter/register.ejs
+++ b/views/voter/register.ejs
@@ -18,7 +18,7 @@
       </div>
       <nav class="header-nav">
         <ul class="header-nav-content">
-          <li>Voter Registration</li>
+          <li id="active-link">Voter Registration</li>
         </ul>
       </nav>
       <div class="header-bottom-line"></div>
@@ -362,11 +362,11 @@
         <img src="img/copyright.png" class="footer-img" id="copyright-img" />
         <p>2025 - Fourmula 1</p>
       </div>
-      <div class="footer-right">
+      <!-- <div class="footer-right">
         <img src="img/log-in.png" class="footer-img" id="admin-img" />
         <p>Admin? Log in&nbsp;</p>
         <a href="/admin-login"> here.</a>
-      </div>
+      </div> -->
     </footer>
   </body>
 </html>
