--- a/public/css/home.css
+++ b/public/css/home.css
@@ -295,7 +295,7 @@
 
   .content-main-right img,
   .content-main-left img {
-    margin-top: -2rem;
+    margin-top: 1rem;
     width: 3rem;
   }
 
@@ -368,7 +368,9 @@
   font-size: 1.5rem;
 }
 
-#register-button {
+#register-button,
+#voting-button {
   width: 10rem;
   height: auto;
+  margin-top: 5%;
 }
