--- a/public/voter/css/verify.css
+++ b/public/voter/css/verify.css
@@ -35,7 +35,7 @@
   border: 0.1rem dashed rgb(91, 84, 84);
   width: 40%;
 
-  height: 100%; /* Should be removed. Only for demonstration */
+  /* height: 100%;  */
   display: flex;
   flex-direction: column;
 }
@@ -287,10 +287,10 @@ table {
     height: auto; /* Allow receipt height to adjust dynamically */
   }
 
-  .receipt-header {
+  /* .receipt-header {
     flex-direction: column;
     padding: 1rem;
-  }
+  } */
 
   .receipt-footer {
     height: auto;
@@ -358,5 +358,9 @@ table {
     overflow-wrap: break-word; /* Alternative for better browser support */
     white-space: normal; /* Allows text to wrap naturally */
     max-width: 100%; /* Ensures it doesn't exceed the container */
+  }
+
+  .receipt-header {
+    padding: 0;
   }
 }
