--- a/views/voter/data-privacy.ejs
+++ b/views/voter/data-privacy.ejs
@@ -49,7 +49,8 @@
         <h3 class="center yellow">Privacy Notice</h3>
         <br />
         <p>
-          In compliance with the Data Privacy Act of 2012 (RA 10173), your personal information will be collected solely for the purpose of verifying your eligibility to vote in the BulSU Student Government Elections S.Y. 2025-2026. Additionally, this information will be used to generate an accurate ballot specific to each student based on details such as campus, college, and program.<br />
+          In compliance with the Data Privacy Act of 2012 (RA 10173), your personal information will be collected solely for the purpose of verifying your eligibility to vote in the BulSU Student Government Elections S.Y. 2025-2026. Additionally, this information will be used to generate an accurate
+          ballot specific to each student based on details such as campus, college, and program.<br />
           <br />
           Only authorized personnel will have access to this data, and strict security measures are in place to ensure its confidentiality and integrity throughout the voting process.<br />
           <br />
@@ -87,11 +88,11 @@
         <img src="img/copyright.png" class="footer-img" id="copyright-img" />
         <p>2025 - Fourmula 1</p>
       </div>
-      <div class="footer-right">
+      <!-- <div class="footer-right">
         <img src="img/log-in.png" class="footer-img" id="admin-img" />
         <p>Admin? Log in&nbsp;</p>
         <a href="/admin-login"> here.</a>
-      </div>
+      </div> -->
     </footer>
     <script src="js/index.js"></script>
 
