--- a/views/voter/verify.ejs
+++ b/views/voter/verify.ejs
@@ -82,10 +82,15 @@
             <div class="column box-shadow">
               <div class="receipt-header">
                 <img src="/img/logo_tanikala.png" />
+                <div class="voting-receipt">VOTING RECEIPT</div>
               </div>
-              <div class="receipt-subheader"><div class="voting-receipt">VOTING RECEIPT</div></div>
+
+              <div class="receipt-subheader">
+                <br />
+              </div>
 
               <br />
+
               <hr />
 
               <div class="left">
