--- a/views/voter/review.ejs
+++ b/views/voter/review.ejs
@@ -34,7 +34,9 @@
         <ul class="header-nav-content">
           <div id="links">
             <li>Vote</li>
+            <p class="line">|</p>
             <li id="active-link">Review</li>
+            <p class="line">|</p>
             <li>Verify</li>
           </div>
           <div class="settings">
