--- a/public/voter/css/index-voter.css
+++ b/public/voter/css/index-voter.css
@@ -262,6 +262,12 @@ button {
   gap: 2rem;
 }
 
+#links {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+}
+
 @media (max-width: 1000px) {
   .header {
     height: 15vh;
@@ -279,7 +285,8 @@ button {
     width: 30vw;
     padding: 0;
   }
-  #links {
+  #links,
+  .header-nav-content {
     display: flex;
     flex-direction: column;
     gap: 0.2rem;
@@ -332,5 +339,9 @@ button {
     flex-direction: column;
     align-items: center;
     gap: 1rem;
+  }
+
+  .line {
+    display: none;
   }
 }
