working senator vote tally

--- a/views/admin/election-results.ejs
+++ b/views/admin/election-results.ejs
@@ -224,7 +224,7 @@
           <!-- Supreme Student Council Section -->
           <!-- Supreme Student Council Section -->
           <div class="main-left">
-            <h1 class="ssc">Supreme Student Council</h1>
+            <h1 class="ssc">Supreme Student CouncilHIZARINA</h1>
 
             <!-- President -->
             <div class="container-ssc" id="container-president">
