--- a/views/admin/election-vote-tally.ejs
+++ b/views/admin/election-vote-tally.ejs
@@ -260,8 +260,7 @@
         <div class="first-main">
           <div class="main-left">
             <h1 class="ssc">Supreme Student Council</h1>
-            <% const presidentCandidates = candidates.filter(candidate => candidate.position === 'president' && candidate.name !== 'Abstain'); const abstainCandidate = candidates.find(candidate => candidate.position === 'president' && candidate.name === 'Abstain'); presidentCandidates.sort((a, b) =>
-            Number(b.voteCount) - Number(a.voteCount)); const totalVotes = presidentCandidates.reduce((acc, candidate) => acc + (Number(candidate.voteCount) || 0), 0); %>
+            <% const presidentCandidates = candidates.filter(candidate => candidate.position === 'president' && candidate.name !== 'Abstain'); const abstainCandidate = candidates.find(candidate => candidate.position === 'president' && candidate.name === 'Abstain'); presidentCandidates.sort((a, b) => Number(b.voteCount) - Number(a.voteCount)); const totalVotes = presidentCandidates.reduce((acc, candidate) => acc + (Number(candidate.voteCount) || 0), 0); %>
             <div class="container-ssc" id="container-president">
               <div class="container-position">
                 <h1 class="position-ssc">President</h1>
@@ -316,8 +315,7 @@
               });
             </script>
 
-            <% const viceCandidates = candidates.filter(candidate => candidate.position === 'vice president' && candidate.name !== 'Abstain'); const abstainCandidateVice = candidates.find(candidate => candidate.position === 'vice president' && candidate.name === 'Abstain'); viceCandidates.sort((a,
-            b) => Number(b.voteCount) - Number(a.voteCount)); const totalVotesVice = viceCandidates.reduce((acc, candidate) => acc + (Number(candidate.voteCount) || 0), 0); %>
+            <% const viceCandidates = candidates.filter(candidate => candidate.position === 'vice president' && candidate.name !== 'Abstain'); const abstainCandidateVice = candidates.find(candidate => candidate.position === 'vice president' && candidate.name === 'Abstain'); viceCandidates.sort((a, b) => Number(b.voteCount) - Number(a.voteCount)); const totalVotesVice = viceCandidates.reduce((acc, candidate) => acc + (Number(candidate.voteCount) || 0), 0); %>
             <div class="container-ssc" id="container-vice-president">
               <div class="container-position">
                 <h1 class="position-ssc">Vice President</h1>
@@ -371,15 +369,14 @@
               });
             </script>
 
-            <% const senatorCandidates = candidates.filter(candidate => candidate.position === 'senator' && candidate.name !== 'Abstain'); senatorCandidates.sort((a, b) => Number(b.voteCount) - Number(a.voteCount)); const maxVote = senatorCandidates.reduce((max, candidate) => Math.max(max,
-            Number(candidate.voteCount) || 0), 0); const totalVotesSenator = senatorCandidates.reduce((acc, candidate) => acc + (Number(candidate.voteCount) || 0), 0); %>
+            <% const senatorCandidates = candidates.filter(candidate => candidate.position === 'senator' && candidate.name !== 'Abstain'); senatorCandidates.sort((a, b) => Number(b.voteCount) - Number(a.voteCount)); const totalVotesSenator = senatorCandidates.reduce((acc, candidate) => acc + (Number(candidate.voteCount) || 0), 0); %>
             <div class="container-ssc" id="container-senator">
               <div class="container-position">
                 <h1 class="position-ssc">Senators</h1>
               </div>
               <hr />
               <br />
-              <% let calculatedTotalVotesSenator = 0; %> <% senatorCandidates.forEach(candidate => { const voteCount = Number(candidate.voteCount) || 0; calculatedTotalVotesSenator += voteCount; const percentage = maxVote > 0 ? ((voteCount / maxVote) * 100).toFixed(2) : 0; %>
+              <% let calculatedTotalVotesSenator = 0; %> <% senatorCandidates.forEach(candidate => { const voteCount = Number(candidate.voteCount) || 0; calculatedTotalVotesSenator += voteCount; const percentage = totalVotesSenator > 0 ? ((voteCount / totalVotesSenator) * 100).toFixed(2) : 0; %>
               <div class="candidate">
                 <div class="img-container">
                   <img src="<%= candidate.image %>" alt="<%= candidate.name %>" />
@@ -434,8 +431,8 @@
             </div>
             <br />
             <div id="lsc-container">
-              <% const governorCandidates = candidates.filter(candidate => candidate.position === 'governor' && candidate.college && candidate.name !== 'Abstain'); const abstainCandidateGovernor = candidates.find(candidate => candidate.position === 'governor' && candidate.college && candidate.name
-              === 'Abstain'); governorCandidates.sort((a, b) => Number(b.voteCount) - Number(a.voteCount)); const governorTotalVotes = governorCandidates.reduce((acc, candidate) => acc + (Number(candidate.voteCount) || 0), 0); let calculatedTotalVotesGovernor = governorTotalVotes; %>
+              <% const governorCandidates = candidates.filter(candidate => candidate.position === 'governor' && candidate.college && candidate.name !== 'Abstain'); const abstainCandidateGovernor = candidates.find(candidate => candidate.position === 'governor' && candidate.college && candidate.name === 'Abstain'); governorCandidates.sort((a, b) => Number(b.voteCount) - Number(a.voteCount)); const governorTotalVotes = governorCandidates.reduce((acc, candidate) => acc + (Number(candidate.voteCount)
+              || 0), 0); let calculatedTotalVotesGovernor = governorTotalVotes; %>
               <div class="container-lsc" id="container-lsc-governor">
                 <div class="container-position">
                   <h1 class="position-lsc">Governor</h1>
@@ -462,8 +459,7 @@
                   <a href="#" class="votes" data-uniqueid="<%= candidate.uniqueId %>" data-name="<%= candidate.name %>">View List of Voter IDs</a>
                 </div>
 
-                <% }); %> <% if (abstainCandidateGovernor) { const voteCount = Number(abstainCandidateGovernor.voteCount) || 0; const percentage = governorTotalVotes > 0 ? ((voteCount / governorTotalVotes) * 100).toFixed(2) : 0; const colleges = ["CAFA", "CAL", "CBEA", "CCJE", "CHTM", "CICT", "CIT",
-                "CN", "COE", "COED", "CS", "CSER", "CSSP"]; colleges.forEach(college => { %>
+                <% }); %> <% if (abstainCandidateGovernor) { const voteCount = Number(abstainCandidateGovernor.voteCount) || 0; const percentage = governorTotalVotes > 0 ? ((voteCount / governorTotalVotes) * 100).toFixed(2) : 0; const colleges = ["CAFA", "CAL", "CBEA", "CCJE", "CHTM", "CICT", "CIT", "CN", "COE", "COED", "CS", "CSER", "CSSP"]; colleges.forEach(college => { %>
                 <div class="candidate lsc-candidate abstain" data-college="<%= college %>">
                   <div class="candidate">
                     <div class="img-container">
@@ -486,16 +482,15 @@
                   <span><u><%= calculatedTotalVotesGovernor %></u></span> total votes cast
                 </h3>
               </div>
-              <% const viceGovernorCandidates = candidates.filter(candidate => candidate.position === 'vice governor' && candidate.college && candidate.name !== 'Abstain'); const abstainCandidateViceGovernor = candidates.find(candidate => candidate.position === 'vice governor' && candidate.college
-              && candidate.name === 'Abstain'); viceGovernorCandidates.sort((a, b) => Number(b.voteCount) - Number(a.voteCount)); const totalVotesViceGovernor = viceGovernorCandidates.reduce((acc, candidate) => acc + (Number(candidate.voteCount) || 0), 0); %>
+              <% const viceGovernorCandidates = candidates.filter(candidate => candidate.position === 'vice governor' && candidate.college && candidate.name !== 'Abstain'); const abstainCandidateViceGovernor = candidates.find(candidate => candidate.position === 'vice governor' && candidate.college && candidate.name === 'Abstain'); viceGovernorCandidates.sort((a, b) => Number(b.voteCount) - Number(a.voteCount)); const totalVotesViceGovernor = viceGovernorCandidates.reduce((acc, candidate) => acc
+              + (Number(candidate.voteCount) || 0), 0); %>
               <div class="container-lsc" id="container-lsc-vice-governor">
                 <div class="container-position">
                   <h1 class="position-lsc">Vice Governor</h1>
                 </div>
                 <hr />
                 <br />
-                <% let calculatedTotalVotesViceGovernor = 0; %> <% viceGovernorCandidates.forEach(candidate => { const voteCount = Number(candidate.voteCount) || 0; calculatedTotalVotesViceGovernor += voteCount; const percentage = totalVotesViceGovernor > 0 ? ((voteCount / totalVotesViceGovernor) *
-                100).toFixed(2) : 0; %>
+                <% let calculatedTotalVotesViceGovernor = 0; %> <% viceGovernorCandidates.forEach(candidate => { const voteCount = Number(candidate.voteCount) || 0; calculatedTotalVotesViceGovernor += voteCount; const percentage = totalVotesViceGovernor > 0 ? ((voteCount / totalVotesViceGovernor) * 100).toFixed(2) : 0; %>
                 <div class="candidate lsc-candidate" data-college="<%= candidate.college %>">
                   <div class="candidate">
                     <div class="img-container">
@@ -515,8 +510,7 @@
                   <a href="#" class="votes" data-uniqueid="<%= candidate.uniqueId %>" data-name="<%= candidate.name %>">View List of Voter IDs</a>
                 </div>
 
-                <% }); %> <% if (abstainCandidateViceGovernor) { const voteCount = Number(abstainCandidateViceGovernor.voteCount) || 0; const percentage = totalVotesViceGovernor > 0 ? ((voteCount / totalVotesViceGovernor) * 100).toFixed(2) : 0; const colleges = ["CAFA", "CAL", "CBEA", "CCJE",
-                "CHTM", "CICT", "CIT", "CN", "COE", "COED", "CS", "CSER", "CSSP"]; colleges.forEach(college => { %>
+                <% }); %> <% if (abstainCandidateViceGovernor) { const voteCount = Number(abstainCandidateViceGovernor.voteCount) || 0; const percentage = totalVotesViceGovernor > 0 ? ((voteCount / totalVotesViceGovernor) * 100).toFixed(2) : 0; const colleges = ["CAFA", "CAL", "CBEA", "CCJE", "CHTM", "CICT", "CIT", "CN", "COE", "COED", "CS", "CSER", "CSSP"]; colleges.forEach(college => { %>
                 <div class="candidate lsc-candidate abstain" data-college="<%= college %>">
                   <div class="candidate">
                     <div class="img-container">
@@ -539,17 +533,15 @@
                   <span><u><%= calculatedTotalVotesViceGovernor %></u></span> total votes cast
                 </h3>
               </div>
-              <% const boardMembersAll = candidates.filter(candidate => candidate.position === 'board member' && candidate.college && candidate.program); const boardMembersNonAbstain = boardMembersAll.filter(candidate => candidate.name !== 'Abstain'); const boardMembersAbstain =
-              boardMembersAll.filter(candidate => candidate.name === 'Abstain'); const totalVotesBoardMember = boardMembersNonAbstain.reduce((acc, candidate) => acc + (Number(candidate.voteCount) || 0), 0); let boardMembersByProgram = {}; boardMembersNonAbstain.forEach(candidate => { if
-              (!boardMembersByProgram[candidate.program]) { boardMembersByProgram[candidate.program] = []; } boardMembersByProgram[candidate.program].push(candidate); }); Object.keys(boardMembersByProgram).forEach(program => { boardMembersByProgram[program].sort((a, b) => Number(b.voteCount) -
-              Number(a.voteCount)); }); let abstainByProgram = {}; boardMembersAbstain.forEach(candidate => { if (!abstainByProgram[candidate.program]) { abstainByProgram[candidate.program] = []; } abstainByProgram[candidate.program].push(candidate); }); %>
+              <% const boardMembersAll = candidates.filter(candidate => candidate.position === 'board member' && candidate.college && candidate.program); const boardMembersNonAbstain = boardMembersAll.filter(candidate => candidate.name !== 'Abstain'); const boardMembersAbstain = boardMembersAll.filter(candidate => candidate.name === 'Abstain'); const totalVotesBoardMember = boardMembersNonAbstain.reduce((acc, candidate) => acc + (Number(candidate.voteCount) || 0), 0); let boardMembersByProgram =
+              {}; boardMembersNonAbstain.forEach(candidate => { if (!boardMembersByProgram[candidate.program]) { boardMembersByProgram[candidate.program] = []; } boardMembersByProgram[candidate.program].push(candidate); }); Object.keys(boardMembersByProgram).forEach(program => { boardMembersByProgram[program].sort((a, b) => Number(b.voteCount) - Number(a.voteCount)); }); let abstainByProgram = {}; boardMembersAbstain.forEach(candidate => { if (!abstainByProgram[candidate.program]) {
+              abstainByProgram[candidate.program] = []; } abstainByProgram[candidate.program].push(candidate); }); %>
               <div class="container-lsc" id="container-lsc-board-member">
                 <div class="container-position">
                   <h1 class="position-lsc">Board Member</h1>
                 </div>
                 <hr />
-                <% Object.keys(boardMembersByProgram).forEach(program => { let programTotalVotes = boardMembersByProgram[program].reduce((acc, candidate) => acc + (Number(candidate.voteCount) || 0), 0); if (abstainByProgram[program]) { programTotalVotes += abstainByProgram[program].reduce((acc,
-                candidate) => acc + (Number(candidate.voteCount) || 0), 0); } %>
+                <% Object.keys(boardMembersByProgram).forEach(program => { let programTotalVotes = boardMembersByProgram[program].reduce((acc, candidate) => acc + (Number(candidate.voteCount) || 0), 0); if (abstainByProgram[program]) { programTotalVotes += abstainByProgram[program].reduce((acc, candidate) => acc + (Number(candidate.voteCount) || 0), 0); } %>
                 <div class="program-group" id="college-<%= boardMembersByProgram[program][0].college %>">
                   <h2 class="program-header">
                     <ul>
