--- a/public/admin/css/index-admin.css
+++ b/public/admin/css/index-admin.css
@@ -59,7 +59,7 @@
 }
 
 body {
-  border: 1px solid green;
+  /* border: 1px solid green; */
   display: flex;
   flex-direction: column;
   min-height: 100vh;
